--- a/config/sites/default/block.block.tower_health_page_title.yml
+++ b/config/sites/default/block.block.tower_health_page_title.yml
@@ -19,7 +19,7 @@ settings:
   id: page_title_block
   label: 'Page title'
   provider: core
-  label_display: '0'
+  label_display: visible
 visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
