--- a/config/sites/default/core.entity_form_display.paragraph.care_circle.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.care_circle.default.yml
@@ -10,16 +10,34 @@ dependencies:
     - field.field.paragraph.care_circle.field_circle_section_ref
     - paragraphs.paragraphs_type.care_circle
   module:
+    - field_group
     - link
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_care_circle_sections:
+      children:
+        - field_care_circle_title
+        - field_care_circle_title_link
+        - field_circle_section_ref
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      region: content
+      format_settings:
+        description: ''
+        required_fields: true
+        id: ''
+        classes: ''
+      label: 'Care Circle & Sections'
 id: paragraph.care_circle.default
 targetEntityType: paragraph
 bundle: care_circle
 mode: default
 content:
   field_care_circle_description:
-    weight: 4
+    weight: 1
     settings:
       rows: 5
       placeholder: ''
@@ -27,14 +45,6 @@ content:
     type: text_textarea
     region: content
   field_care_circle_text_title:
-    weight: 3
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_care_circle_title:
     weight: 0
     settings:
       size: 60
@@ -42,8 +52,16 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_care_circle_title:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_care_circle_title_link:
-    weight: 1
+    weight: 4
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -52,14 +70,14 @@ content:
     region: content
   field_circle_section_ref:
     type: entity_reference_paragraphs
-    weight: 2
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: care_circle_section
     third_party_settings: {  }
     region: content
 hidden:
