--- a/config/sites/default/field.field.paragraph.care_circle.field_care_circle_title.yml
+++ b/config/sites/default/field.field.paragraph.care_circle.field_care_circle_title.yml
@@ -10,7 +10,7 @@ field_name: field_care_circle_title
 entity_type: paragraph
 bundle: care_circle
 label: 'Circle Title'
-description: ''
+description: 'Optionally add a title that will display in the middle of the care circle.'
 required: false
 translatable: false
 default_value: {  }
