--- a/config/sites/default/field.field.paragraph.care_circle.field_care_circle_title_link.yml
+++ b/config/sites/default/field.field.paragraph.care_circle.field_care_circle_title_link.yml
@@ -12,7 +12,7 @@ field_name: field_care_circle_title_link
 entity_type: paragraph
 bundle: care_circle
 label: 'Circle Title Link'
-description: ''
+description: 'Optionally add a link to the title that will display in the middle of the care circle.'
 required: false
 translatable: false
 default_value: {  }
