Group migrations better.

--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_insurance_groups.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_insurance_groups.yml
@@ -1,7 +1,6 @@
 id: towerhealth_insurance_groups
 label: Import tower health insurance group terms.
-migration_groups:
-  - TowerHealth MSOW import
+migration_group: towerhealth_provider_base_group
 dependencies:
   enforced:
     module:
