--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_location_hours.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_location_hours.yml
@@ -3,8 +3,7 @@
 ---
 id: towerhealth_location_hours
 label: Import tower health location hours.
-migration_groups:
-  - TowerHealth MSOW import
+migration_group: towerhealth_locations_group
 
 dependencies:
   enforced:
