--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
@@ -1,7 +1,6 @@
 id: towerhealth_locations
 label: Import tower health location content
-migration_groups:
-  - TowerHealth MSOW import
+migration_group: towerhealth_locations_group
 dependencies:
   enforced:
     module:
