--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_provider_specialties.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_provider_specialties.yml
@@ -1,7 +1,6 @@
 id: towerhealth_provider_specialties
 label: Import tower health clinical areas of interest taxonomy terms.
-migration_groups:
-  - TowerHealth MSOW import
+migration_group: towerhealth_provider_base_group
 dependencies:
   enforced:
     module:
