--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
@@ -1,7 +1,6 @@
 id: towerhealth_providers
 label: Import tower health provider content
-migration_groups:
-  - TowerHealth MSOW import
+migration_group: towerhealth_provider_base_group
 dependencies:
   enforced:
     module:
