--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers_hospital_aff.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers_hospital_aff.yml
@@ -3,8 +3,7 @@
 ---
 id: towerhealth_providers_hospital_aff
 label: Import tower health provider hospital affiliations.
-migration_groups:
-  - TowerHealth MSOW import
+migration_group: towerhealth_provider_details_group
 
 dependencies:
   enforced:
