--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/card-group--video.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/card-group--video.yml
@@ -1,5 +1,7 @@
 cards:
-  - videoURL: https://www.youtube.com/embed/d3ZLhedUtkA
+  - url: 
+      link: https://www.youtube.com/embed/d3ZLhedUtkA
+      label: Watch the Video
     type: video
     thumbnail:
       src: ../../images/video-placeholder-1.png
@@ -7,7 +9,9 @@ cards:
     doctor: Karen Hoerst, MD
     title: Advanced Stroke Care
     desc: When symptoms of a stroke begin, it's vital to seek treatment quickly. Dr. Karen Hoerst explains how Reading Hospital is prepared to provide advanced stroke care.
-  - videoURL: https://www.youtube.com/embed/d3ZLhedUtkA
+  - url: 
+      link: https://www.youtube.com/embed/d3ZLhedUtkA
+      label: Watch the Video
     type: video
     thumbnail:
       src: ../../images/video-placeholder-1.png
@@ -15,7 +19,9 @@ cards:
     doctor: Karen Hoerst, MD
     title: Advanced Stroke Care
     desc: When symptoms of a stroke begin, it's vital to seek treatment quickly. Dr. Karen Hoerst explains how Reading Hospital is prepared to provide advanced stroke care.
-  - videoURL: https://www.youtube.com/embed/d3ZLhedUtkA
+  - url: 
+      link: https://www.youtube.com/embed/d3ZLhedUtkA
+      label: Watch the Video
     type: video
     thumbnail:
       src: ../../images/video-placeholder-1.png
@@ -23,7 +29,9 @@ cards:
     doctor: Karen Hoerst, MD
     title: Advanced Stroke Care
     desc: When symptoms of a stroke begin, it's vital to seek treatment quickly. Dr. Karen Hoerst explains how Reading Hospital is prepared to provide advanced stroke care.
-  - videoURL: https://www.youtube.com/embed/d3ZLhedUtkA
+  - url: 
+      link: https://www.youtube.com/embed/d3ZLhedUtkA
+      label: Watch the Video
     type: video
     thumbnail:
       src: ../../images/video-placeholder-1.png
@@ -31,7 +39,9 @@ cards:
     doctor: Karen Hoerst, MD
     title: Advanced Stroke Care
     desc: When symptoms of a stroke begin, it's vital to seek treatment quickly. Dr. Karen Hoerst explains how Reading Hospital is prepared to provide advanced stroke care.
-  - videoURL: https://www.youtube.com/embed/d3ZLhedUtkA
+  - url: 
+      link: https://www.youtube.com/embed/d3ZLhedUtkA
+      label: Watch the Video
     type: video
     thumbnail:
       src: ../../images/video-placeholder-1.png
@@ -39,7 +49,9 @@ cards:
     doctor: Karen Hoerst, MD
     title: Advanced Stroke Care
     desc: When symptoms of a stroke begin, it's vital to seek treatment quickly. Dr. Karen Hoerst explains how Reading Hospital is prepared to provide advanced stroke care.
-  - videoURL: https://www.youtube.com/embed/d3ZLhedUtkA
+  - url: 
+      link: https://www.youtube.com/embed/d3ZLhedUtkA
+      label: Watch the Video
     type: video
     thumbnail:
       src: ../../images/video-placeholder-1.png
@@ -47,7 +59,9 @@ cards:
     doctor: Karen Hoerst, MD
     title: Advanced Stroke Care
     desc: When symptoms of a stroke begin, it's vital to seek treatment quickly. Dr. Karen Hoerst explains how Reading Hospital is prepared to provide advanced stroke care.
-  - videoURL: https://www.youtube.com/embed/d3ZLhedUtkA
+  - url: 
+      link: https://www.youtube.com/embed/d3ZLhedUtkA
+      label: Watch the Video
     type: video
     thumbnail:
       src: ../../images/video-placeholder-1.png
