add star svg back (due to drupal data change)

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/review.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/review.yml
@@ -1,3 +1,4 @@
 rating: 4
+rating_icon: "star.svg"
 review: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, temporibus dolor rerum consequatur reiciendis, magni cum deserunt pariatur nisi atque unde commodi dicta nemo libero enim porro obcaecati? Ducimus, sapiente!'
 date: July 2019
