article content type updates

--- a/config/sites/default/core.entity_view_display.node.article.default.yml
+++ b/config/sites/default/core.entity_view_display.node.article.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.article.body
+    - field.field.node.article.field_article_body
     - field.field.node.article.field_article_date
     - field.field.node.article.field_article_teaser
     - field.field.node.article.field_article_type_ref
@@ -17,12 +17,12 @@ targetEntityType: node
 bundle: article
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 2
+  field_article_body:
+    weight: 4
+    label: above
     settings: {  }
     third_party_settings: {  }
+    type: text_default
     region: content
   field_article_date:
     weight: 1
