--- a/config/sites/default/core.entity_view_display.node.article.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.article.teaser.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.article.body
+    - field.field.node.article.field_article_body
     - field.field.node.article.field_article_date
     - field.field.node.article.field_article_teaser
     - field.field.node.article.field_article_type_ref
@@ -48,5 +48,5 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
-  body: true
+  field_article_body: true
   search_api_excerpt: true
