--- a/config/sites/default/core.entity_form_display.node.article.default.yml
+++ b/config/sites/default/core.entity_form_display.node.article.default.yml
@@ -19,6 +19,7 @@ third_party_settings:
     group_content:
       children:
         - group_description
+        - group_teaser
       parent_name: ''
       weight: 0
       format_type: tabs
@@ -48,8 +49,8 @@ third_party_settings:
     group_teaser:
       children:
         - field_article_teaser
-      parent_name: ''
-      weight: 2
+      parent_name: group_content
+      weight: 21
       format_type: tab
       region: content
       format_settings:
