Revert "start side menu one level lower"
This reverts commit db7cf0a1247020f215a5683306246bb05c90cbfe.

--- a/config/sites/default/block.block.main_menu_sidebar_level_3.yml
+++ b/config/sites/default/block.block.main_menu_sidebar_level_3.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - system.menu.main-menu-sidebar
   module:
+    - ctools
     - menu_block
     - system
   theme:
@@ -26,8 +27,17 @@ settings:
   parent: 'main-menu-sidebar:'
   suggestion: main_menu_sidebar
 visibility:
+  'entity_bundle:node':
+    id: 'entity_bundle:node'
+    bundles:
+      location: location
+      page: page
+      service: service
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
   request_path:
     id: request_path
-    pages: "/academics/academic-departments/*\r\n/locations\r\n/locations/*\r\n/services\r\n/services/*"
-    negate: true
+    pages: "/services*\r\n/locations*"
+    negate: false
     context_mapping: {  }
