show homepage without home link

--- a/config/sites/default/menu_breadcrumb.settings.yml
+++ b/config/sites/default/menu_breadcrumb.settings.yml
@@ -6,7 +6,7 @@ stop_on_first_match: false
 append_member_page: false
 member_page_as_link: false
 remove_home: false
-add_home: false
+add_home: true
 front_title: 0
 exclude_empty_url: false
 derived_active_trail: false
